修復 ConfigurationSerializable 的 序列/反序列問題